# AetherMem

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  README_install.md  find_hardcoded_paths.py  pyproject.toml  requirements.txt  setup.py  test_cross_platform.py  test_end_to_end.py  test_imports.py  test_imports_direct.py
config/: config.example.yaml
docs/: CONTRIBUTING.md  conf.py  index.md  make.bat
docs/architecture/: OVERVIEW.md
examples/: basic_protocol.py
scripts/: add_license_headers.py  quick_validation.py  validate_project.py
src/aethermem/: __init__.py
src/aethermem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aethermem/integration/openclaw/: adapter.py
src/aethermem/resonance/: interaction_metrics.py
src/aethermem/utils/: __init__.py  platform.py
src/api/: __init__.py
src/core/: vwl_layer.py
src/integration/: config_manager.py
src/integration/openclaw/: __init__.py  skill_registry.py
src/resonance/: temporal_decay.py
tests/: __init__.py  test_basic.py
